--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ dj-static==0.0.6
 Django==4.0.3
 django-heroku==0.3.1
 django-storages==1.12.3
+django-phonenumber-field==6.1.0
 gunicorn==20.1.0
 idna==3.3
 jmespath==0.10.0
